--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -3,6 +3,20 @@
   background: papayawhip;
 }
 
+.header{
+  padding: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+ul{
+  display: flex;
+  gap: 8px;
+  margin:0;
+  padding:0;
+}
+
 .logo {
   font-size: 48px;
   font-weight: 900;
